tests/ui/useless_attribute.stderr
error: useless lint attribute
 --> $DIR/useless_attribute.rs:5:1
  |
5 | #[allow(dead_code)]
  | ^^^^^^^^^^^^^^^^^^^ help: if you just forgot a `!`, use `#![allow(dead_code)]`
  |
note: lint level defined here
 --> $DIR/useless_attribute.rs:3:9
  |
3 | #![deny(useless_attribute)]
  |         ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

